src/trusted/validator_arm/testdata/bad/invalid_sp_mask_flags.dis
       0:	e081d003 		add	sp, r1, r3
       4:	03cdd480 	(eq)	bic	sp, sp, #-2147483648
